# hangulang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: release.md  v2-known-limitations.md
examples/: convert_cli.rs  gap_probe.rs  layer_probe.rs  probe_columns.rs
src/: error.rs  lib.rs  markdown.rs  options.rs  payload.rs  resources.rs
src/eqedit/: error.rs  latex.rs  lexer.rs  mod.rs  parser.rs
src/ir/: block.rs  formula.rs  geometry.rs  inline.rs  mod.rs  prov.rs  style.rs  table.rs
src/loss/: mod.rs  report.rs
src/parser_adapter/: control.rs  geometry.rs  geometry_pass.rs  inline.rs  mod.rs  paragraph.rs  resources.rs  table.rs
src/writer/: custom.rs  escape.rs  inline.rs  mod.rs  otsl.rs
tests/: equivalence.rs  golden.rs  location.rs  requirements.txt  validator.rs
tests/common/: mod.rs
tests/fixtures/: SOURCES.md
tests/fixtures/golden/: footnotes__endnote-01__hwp.preserve.dclg.xml  footnotes__footnote-01__hwp.preserve.dclg.xml  formulas__eq-01__hwp.lean.dclg.xml  headerfooter__pic-in-head-01__hwp.lean.dclg.xml  headerfooter__pic-in-head-01__hwp.preserve.dclg.xml  headings__api-doc__hwp.lean.dclg.xml  headings__api-doc__hwp.preserve.dclg.xml  lists__number-bullet__hwp.preserve.dclg.xml  lists__para-head-num-2__hwp.lean.dclg.xml  mixed__exam-math__hwp.lean.dclg.xml  mixed__exam-math__hwp.preserve.dclg.xml  mixed__exam-social__hwp.lean.dclg.xml  mixed__exam-social__hwp.location.lean.dclg.xml  mixed__exam-social__hwp.preserve.dclg.xml  mixed__strikethrough-synth__hwpx.lean.dclg.xml  (+11 more)
(+1 files in other folders)
